_sass/catalog.scss
.catalog-heading {
  text-align: center;
  margin: 2.5rem 0 1rem 0;
  word-spacing: 5px;
}
.catalog-subtext {
  text-align: center;
  color: var(--color-secondary-dark);
  font-size: 18px;
}
/* CARD-STYLES */
.card {
  position: relative;
  width: 220px;
  height: 250px;
  border-radius: 15px;
  border: 0;
  transition: 0.4s ease-out;
  margin-bottom: 20px;
  display: block;
  margin-bottom: 20px;
  perspective: 1000px;
  transition: all .9s;
  // overflow: hidden;
  // background:var(--background-light) ;

  
  .card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    border-radius: 15px;
  }
  
  &:hover .card-inner {
    // transform: rotateY(180deg);
    transform: translateY(-2%);
  }
  
  .front, .back {
    box-shadow: 2px 2px 6px 0px #00d3a9;
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    border-radius: 15px;
    backface-visibility: hidden;
  }
  
  .front {
    background:var(--background-light-cards) ;
  }
  
  .back {
    color: white;
    transform: rotateY(180deg);
    background:var(--background-primary) ;
  }
  
}



.card:hover {
  // transform: rotateY(180deg);
  cursor: pointer;
  .chip {
    // background: rgba(182, 215, 168, 0.4);
  }
}
.pattern-image-overlay {
  opacity: 0.5;
  width: 60%;
  object-fit: contain;
  position: absolute;
  margin-left: 5%;
  border-radius: 15px;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}
.card-overlay {
  position: relative;
  width: 220px;
  height: 250px;
  // padding: 20px;
  border-radius: 15px;
  border: 0;
  background: rgba(0, 0, 0, 0.7) !important;
  box-shadow: 2px 2px 6px 0px #00d3a9;
  margin-bottom: 20px;
}
.overlay-text {
  position: absolute;
  top: 40%;
  left: 50%;
  color: white;
  font-size: 19px;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  z-index: 2;
  white-space: nowrap;
}
.pattern-id-overlay {
  position: absolute;
  bottom: 0;
  right: 0;
  padding-top: 10px;
  margin-right: 14px;
  color: white;
  opacity: 0.7;
}
.catalog {
  padding-top: 5rem;
  display: flex;

  & .row{
    display: flex;
    flex-wrap: wrap;
    flex: 0 0 75%;
    gap: 1rem;
    justify-content: space-around;
    height: fit-content;
  }

  @media (max-width:770px) {
    flex-direction: column;
  }
}

h3 {
  font-weight: bold;
}
p {
  font-family: "Qanelas Soft", "Open Sans", "sans-serif";
  -webkit-font-smoothing: antialiased;
  font-size: 1.1rem;
}
.inner-span {
  font-size: 16px;
  position: relative;
  color: black;
}
.column:has(.card) {
  // float: left;
  // padding: 0 10px;
  display: block;
  // margin: 0 1rem;
}
.column{
  display: none;
}
.smp-overlay {
  width: 25px;
  bottom: 0;
  right: 0;
  opacity: 0.7;
  vertical-align: middle;
  padding-right: 2px;
}
.smp {
  width: 25px;
  bottom: 0;
  right: 0;
  vertical-align: middle;
  padding-right: 2px;
}
.tooltip-modal:hover .tooltiptext-modal {
  visibility: visible;
}

.tooltip-modal .tooltiptext-modal {
  visibility: hidden;
  width: 140px;
  display: inline-block;
  color: white;
  background-color: #1a2421;
  text-align: center;
  font-size: 1em;
  border-radius: 7px;
  z-index: 1;
  font-size: 15px;
  height: 40px;
  line-height: 40px;
  margin-left: 1rem;
}
.import {
  background-color: #00b39fff;
  color: white;
  border-radius: 4px;
  border: none;
  padding: 10px;
  cursor: pointer;
}
.import-disabled {
  background-color: #aaa;
  color: white;
  border-radius: 4px;
  border: none;
  padding: 10px;
}

.btn-tooltip-grp {
  display: flex;
  flex-direction: row;
  position: relative;
}

.vertical-center {
  -ms-transform: translateY(-60%);
  transform: translateY(25%) translateX(0%);
}
/* Clear floats after the columns */

.disabled-label {
  color: #aaa;
}

.dropdown-icon {
  width: 20px;
  vertical-align: middle;
  padding: 2px;
}

/* CARD-STYLES */
.pattern-type {
  cursor: inherit;
  display: flex-start;
  align-items: center;
  user-select: none;
  white-space: nowrap;
  padding-left: 12px;
  padding-right: 12px;
}
.chip {
  display: inline-flex;
  flex-direction: row-reverse;
  float: right;
  // margin: 4px;
  // background-color: rgb(182, 215, 168);
  background-color: var(--brand-color-primary);
  border: none;
  cursor: default;
  height: 1.5rem;
  outline: none;
  padding-left: 5px;
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
  white-space: nowrap;
  align-items: center;
  border-top-right-radius: 16px;
  border-bottom-left-radius: 16px;
  vertical-align: middle;
  text-decoration: none;
  justify-content: center;
}

.category-label {
  display: inline;
  font-family: "Open Sans", sans-serif;
  font-weight: normal;
  white-space: nowrap;
  border-radius: 1rem;
  background-color: #b6d7a8ff;
  padding: 0.5rem;
  margin: auto;
}

.chip-modal {
  align-self: flex-end;
  float: right;
  box-shadow: 2px 2px 6px grey;
}

.pattern-name {
  color: var(--color-secondary-light);
  font-weight: 1400;
  font-style: bold;
  text-overflow: ellipsis;
  text-align: center;
  padding: 15px 0 3px 0;
}
.pattern-id {
  position: absolute;
  bottom: 0;
  right: 0;
  margin-right: 14px;  
  color: var(--color-secondary-light);
  margin: 0 3px 3px 0;
}
.pattern-image-container {
  display: flex;
  justify-content: center;
}
.pattern-image {
  width: 60%;
  object-fit: contain;
  position: absolute;
}
.patterns-coming-soon {
  max-width: 70%;
  position: relative;
  float: right;
  z-index: 2;
  margin-top: -2.5rem;
  margin-right: -2rem;
  transform: translateY(0%) translateX(0%) rotate(10deg);
  -webkit-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -moz-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -ms-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -o-transform: translateY(0%) translateX(-0%) rotate(10deg);
}

.hidden {
  visibility: hidden;
}
/* ... */

